fixed arrow buttons alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -47,6 +47,8 @@ h1{
     font-weight: 700;
     font-size: clamp(48px, 20vw, 120px);
     line-height: clamp(48px, 20vw, 120px);
+    margin-top: -10px;
+
 }
 
 h2{
@@ -67,6 +69,7 @@ h4{
     font-family: 'Darker Grotesque', sans-serif;
     font-size: clamp(20px, 5vw, 32px);
     font-weight: 500;
+    margin-top: -15px;
 }
 
 h5{
@@ -152,7 +155,11 @@ header{
 .arrow-down{
     margin-top: 0.5em;
     -webkit-animation: mover 1s infinite  alternate;
-    animation: mover 1s infinite  alternate;    
+    animation: mover 1s infinite  alternate;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);    
   }
   
   @-webkit-keyframes mover {
@@ -164,7 +171,13 @@ header{
     margin-left: auto;
     display: block;
     margin-bottom: 1em;
-    max-width: 40px;
+    max-width: 35px;
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%); 
 }
 
 .arrow-back{
@@ -182,7 +195,7 @@ header{
       transform: translateX(0);
     }
     50% {
-      transform: translateX(-20px); /* Adjust the distance as per your needs */
+      transform: translateX(-20px); 
     }
     100% {
       transform: translateX(0);
@@ -202,6 +215,7 @@ header{
     padding-right: clamp(1em, 5vw, 2em);
     padding-top: clamp(2em, 5vw, 4em);
     padding-bottom: clamp(2em, 5vw, 4em);
+    position: relative; 
 }
 
 .study-example {
@@ -306,6 +320,10 @@ ul{
     padding-left: 1.5em;
 }
 
+.info{
+    margin-bottom: 1em;
+}
+
 /* ABOUT ME */
 
 .about-me{
@@ -349,7 +367,12 @@ ul{
     .about-container{
         flex-direction: column;
         align-items: center;
-    }    
+    }   
+
+    .arrow-down {
+        bottom: -1em;
+        transform: translateX(-50%) rotate(-90deg);
+      } 
 }
 
 @media screen and (max-width: 524px) {
@@ -365,6 +388,10 @@ ul{
     
     .information-container{
         max-width: 350px; 
+    }
+
+    .info{
+        margin-bottom: 1.8em;
     }
 
 }
